[package]
name = "p9_wire_format_derive"
version = "0.3.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"
license = "BSD-3-Clause"
description = "Supporting proc-macro for the `p9` crate."
repository = "https://github.com/google/rust-p9"
readme = "../README.md"

[dependencies]
syn = "2"
quote = "^1"
proc-macro2 = "^1"

[lib]
proc-macro = true
